# anthem-next

./: Cargo.toml  Dockerfile  LICENSE  README.md  cl1.lp  temp.rs  test.lp  test2.coffee.spec  test3.spec
.github/workflows/: mdbook.yml  mdbook_deploy.yml  rust.yml
res/derivation_examples/: absolute_lemma_1.spec  basic.spec
res/examples/coloring/: specification.spec  user_guide.ug
res/examples/cover-p2p/: cover.1.lp  cover.2.lp
res/examples/cover-p2s/: cover.spec  cover.ug
res/examples/ex1/: program.lp
res/examples/ex2/: program.lp  specification.spec
res/examples/ex3/: ex3.1.lp  ex3.2.lp  ex3.ug
res/examples/ex4/: ex4.lp  ex4.spec  ex4.ug
res/examples/graph-coloring/: coloring.lp
res/examples/place/: place.lp  place.spec  place.ug
res/examples/primes/: primes.1.lp  primes.2.lp  primes.new.help.spec  primes.ug
res/examples/primes1/: primes.ug  primesO.lp  primesS.lp  primesSO.help.spec
res/external_equivalence_examples/coloring/: coloring.spec
res/external_equivalence_examples/cover/: cover.spec  cover.ug  cover_sym_break.lp
res/external_equivalence_examples/cover-p2p/: cover.1.lp  cover.ug
res/external_equivalence_examples/cover-p2s/: cover.spec  cover.ug
res/external_equivalence_examples/definitions/: def-alt.lp  def.help.spec  def.lp  def.ug
res/external_equivalence_examples/first_order_program_1/: program.lp  specification.spec
res/external_equivalence_examples/graph_coloring/: coloring.lp  coloring.spec  coloring.ug
res/external_equivalence_examples/parsing/: parsing.help.spec  parsing.lp  parsing.spec  parsing.ug
res/manual/: book.toml
src/: lib.rs  main.rs
src/analyzing/: mod.rs  private_recursion.rs  tightness.rs
src/command_line/: arguments.rs  files.rs  mod.rs  procedures.rs
src/convenience/: mod.rs
src/formatting/: asp.rs  fol.rs  mod.rs
src/parsing/: asp.pest  asp.rs  fol.pest  fol.rs  mod.rs
src/problem_building/: mod.rs  preample.p  standard_interpretation.p
src/proof_search/: mod.rs
src/simplifying/: mod.rs
src/syntax/: mod.rs
src/syntax_tree/: asp.rs  fol.rs  mod.rs
src/translating/: completion.rs  gamma.rs  mod.rs  ordered_completion.rs  shorthand.rs  tau_star.rs  tau_star_v1.rs  tau_star_v2.rs  tightening.rs
src/translation/: mod.rs
src/verifying/: mod.rs
tests/: identity.rs
tests/formatting/: main.rs
(+145 files in other folders)
