[package]
name = "anthem"
version = "0.1.0-dev"
rust-version = "1.74.0"
edition = "2021"
authors = ["Zach Hansen <zachhansen@unomaha.edu>", "Tobias Stolzmann <tobias.stolzmann@gmail.com>"]
description = "A translator between answer set programs and first-order logic"
categories = ["compilers"]
keywords = ["translator", "answer set programming", "first-order logic"]
repository = "https://github.com/teiesti/anthem-next"
documentation = "https://docs.rs/anthem"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
either = "1"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
lazy_static = "1"
pest = "2"
pest_derive = "2"
regex = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
